tdf#116965 dbahsql: migrate relationgships

from ALTER statements

Change-Id: I399f2ea6f6181c609952d08beb85068cfb45b4df